package src;
public class iPhone implements ReprodutorMusical, AparelhoTelefonico, NavegadorInternet {


    @Override
    public void ligar(String numero) {
        //Implementação aqui
    }

    @Override
    public void atender(String numero) {
        //Implementação aqui
    }

    @Override
    public void iniciarCorreioVoz(String mensagem, String destinatario) {
        //Implementação aqui
    }

    @Override
    public void exibirPagina(String url) {
        //Implementação aqui
    }

    @Override
    public void adicionarNovaAba(String url) {
        //Implementação aqui
    }

    @Override
    public void atualizarPagina() {
        //Implementação aqui
    }

    @Override
    public void tocar() {
        //Implementação aqui
    }

    @Override
    public void pausar() {
        //Implementação aqui
    }

    @Override
    public void selecionarMusica() {
        //Implementação aqui
    }
}